Improve solution to Homework 02 with clean code principles